--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   flutter_local_notifications: ^13.0.0
   flutter_animate: ^2.0.1
   google_fonts: ^3.0.1
+  flutter_svg: ^1.1.6
+  cached_network_image: ^3.2.3
   fall_dialogs:
     git:
       url: https://github.com/wmfadel/fall_dialogs.git
@@ -75,8 +77,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/svg/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
