--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   google_fonts: ^3.0.1
   flutter_svg: ^1.1.6
   cached_network_image: ^3.2.3
+  get_it: ^7.2.0
   fall_dialogs:
     git:
       url: https://github.com/wmfadel/fall_dialogs.git
