local authentication package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
     git:
       url: https://github.com/wmfadel/fall_dialogs.git
       ref: main
+  authentication:
+    path: ./packages/authentication
 
 dev_dependencies:
   flutter_test:
