--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,14 +35,18 @@ dependencies:
   bloc: ^8.1.0
   equatable: ^2.0.5
   firebase_core: ^2.4.1
+  firebase_messaging: ^14.2.1
   firebase_analytics: ^10.1.0
   firebase_crashlytics: ^3.0.9
-  firebase_dynamic_links: ^5.0.11
   firebase_remote_config: ^3.0.9
+  firebase_dynamic_links: ^5.0.11
+
+
   firebase_in_app_messaging: ^0.7.0+10
 
   flutter_secure_storage: ^7.0.1
   rxdart: ^0.27.7
+  logger: ^1.1.0
   flutter_local_notifications: ^13.0.0
   flutter_animate: ^2.0.1
   google_fonts: ^3.0.1
