--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,8 +57,7 @@ dependencies:
     git:
       url: https://github.com/wmfadel/fall_dialogs.git
       ref: main
-  authentication:
-    path: ./packages/authentication
+
 
 dev_dependencies:
   flutter_test:
@@ -86,6 +85,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/svg/
+    - assets/raw/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
