--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
     git:
       url: https://github.com/wmfadel/fall_dialogs.git
       ref: main
+  auto_route: ^7.8.4
 
 dev_dependencies:
   flutter_test:
@@ -61,7 +62,8 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.1
   icons_launcher: ^2.1.6
-  change_app_package_name: ^1.1.0
+  auto_route_generator: ^7.3.2
+  build_runner:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
